[package]
name = "positions"
version = "0.2.0"
edition = "2021"
description = "A position (finance) definition with some good algebraic properties."
repository = "https://github.com/Nouzan/positions/"
license = "MIT"
keywords = ["finance"]
rust-version = "1.65.0"

[features]
default = ["std", "serde"]
alloc = []
std = [
    "alloc",
    "num-traits/std",
    "serde?/std",
    "thiserror",
]
serde = ["dep:serde"]

[dependencies]
num-traits = { version = "0.2.14", default_features = false }
serde = { version = "1", features = ["derive"], optional = true, default_features = false }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
rust_decimal = "1.17.0"
rust_decimal_macros = "1.17.0"
serde_json = "1.0"
