[package]
name = "positions"
version = "0.2.0"
edition = "2021"
description = "A position (finance) definition with some good algebraic properties."
repository = "https://github.com/Nouzan/positions/"
license = "MIT"
keywords = ["finance"]
rust-version = "1.65.0"

[features]
default = ["std", "serde"]
alloc = ["smol_str"]
std = [
    "alloc",
    "thiserror",
    "serde?/std",
    "smol_str?/std",
    "im",
]
serde = ["dep:serde", "serde_with", "smol_str?/serde"]

[dependencies]
smol_str = { version = "0.1.23", default-features = false, optional = true }
num-traits = { version = "0.2.14", default_features = false }
serde = { version = "1", features = ["derive"], optional = true, default_features = false }
serde_with = { version = "2.1", features = ["macros"], optional = true, default_features = false }
thiserror = { version = "1.0", optional = true }
im = { version = "15.1.0", optional = true }

[dev-dependencies]
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
serde_json = "1.0"
fraction = "0.12.1"
